--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,11 +1,17 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
-  </ion-toolbar>
+  <ion-item color="dark">
+    <ion-searchbar (ionChange)="buscarEndereco($event)" color="light" mode="ios" placeholder="Buscar Destino"></ion-searchbar>
+  </ion-item>
 </ion-header>
 
 <ion-content [fullscreen]="true">
+  <ion-list [hidden]="!listaEnderecos.length">
+    <ion-item lines="full" *ngFor="let local of listaEnderecos" (click)="tracarRota(local)">
+      <ion-label>
+        {{local.description}}
+      </ion-label>
+    </ion-item>
+
+  </ion-list>
   <div id="map" #map></div>
 </ion-content>
